23_architectures/arc2/kubernetes/weather/weather-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: weather-virtualservice
  namespace: aodb
spec:
  hosts:
    - weather
  http:
    - route:
        - destination:
            host: weather
            subset: 'v1'
          weight: 100
      retries:
        attempts: 3
        perTryTimeout: 2s
